# found_it

./: .dockerignore  .env.template  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  environment.yaml  pyproject.toml
langflow_custom_components/: AWS Bedrock.json  MultiQueryRetriever.json  MultiQueryRetriever_with_custom_prompt.json
langflow_flows/: Advanced-RAG-ollama.json
streamlit_app/: streamlit_app.py
